# DataWarehouseFacturacion

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
common/: db.py  schema_initializer.py  session_manager.py
config/: logger_config.py
docs/: naming_conventions.md
dwh_facturacion/: tasks.py
dwh_facturacion_dbt/: dbt_project.yml
dwh_facturacion_dbt/models/bronze/: bronze_sources.yml
dwh_facturacion_dbt/models/datamarts/: dbt_fact_facturacion_ventas.sql
dwh_facturacion_dbt/models/gold/dimensions/: dbt_dim_articulos.sql  dbt_dim_codigos.sql  dbt_dim_facturas.sql  dbt_fact_facturacion.sql  schema.yml
dwh_facturacion_dbt/models/silver/: dbt_fenix_facturas.sql  schema.yml
entities/bronze/: bronze_articulos_entity.py  facturasEntity.py
entities/features/: facturas_excluidas_entity.py
etl/extract/: db_extractor.py
etl/load/: db_load.py
etl/transform/: general_functions.py
include/sql/initialization/: articulos.sql  facturas.sql
models/: base_model.py
pipelines/bronze/: bronze_articulos_pipeline.py  bronze_vendedores_pipeline.py  facturasPipeline.py
pipelines/features/: features_facturas_exluidas_pipeline.py
utils/: general_functions.py
